fix: scrollbar layout shift

--- a/packages/shared/src/styles/base.css
+++ b/packages/shared/src/styles/base.css
@@ -16,9 +16,18 @@ body {
     overflow: hidden;
     padding-right: var(--scrollbar-width, 0px);
 
-    & .z-header {
+    & .fixed[class*="w-full"]:not(.ReactModal__Overlay) {
       border-right: var(--scrollbar-width, 0px) solid transparent;
     }
+
+    & .fixed:not(.ReactModal__Overlay):not([class*="w-full"]) {
+      margin-right: var(--scrollbar-width, 0px);
+    }
+  }
+
+  &.ReactModal__Body--open .ReactModal__Overlay {
+    overflow-y: auto;
+    overscroll-behavior-y: contain;
   }
 
   &.ReactModal__Body--open .ReactModal__Content,
